tests/cmp/record-pat-dotdot-as-field.golden
Parse Error:
tests/cmp/record-pat-dotdot-as-field.trp:3:13 unexpected token TokenEq
